Fixed the first row cutoff

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -126,6 +126,7 @@
     gap: 1rem;
     justify-content: space-around;
     height: fit-content;
+    padding-top: 1rem;
   }
 
   @media (max-width:770px) {
